--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
+  font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .header {
@@ -16,8 +17,13 @@
   background-attachment: fixed;
 }
 
+/*section1*/
 .sectionHome1 {
   padding: 3em;
+}
+
+.list {
+  list-style-image: url('../public/images/bullet.svg');
 }
 
 .list li {
@@ -30,7 +36,8 @@
 }
 
 
-li::marker {
+.list li::marker {
+  color: #ff2;
   unicode-bidi: isolate;
   font-variant-numeric: tabular-nums;
   text-transform: none;
@@ -39,6 +46,27 @@ li::marker {
   text-align-last: start !important;
 }
 
+.mediosDePago {
+  padding:5% 0% 5% 0%;
+  height: 12em 
+}
+
+.botonContacto1 {
+  border-radius: 290486px;
+  padding: 1rem 1.5rem !important;
+    height: auto !important;
+    border: none !important;
+    background-color: #151F2F !important;
+    filter: drop-shadow(4px 4px 8px rgba(20, 34, 114, 0.32));
+    outline: none !important;
+    cursor: pointer;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    font-weight: 600;
+    display: block;
+    margin: auto !important;
+}
+/*login*/
 .loginPage{
   padding: 1em;
   margin: 5em;
