--- a/src/components/cards/cardExpensas.css
+++ b/src/components/cards/cardExpensas.css
@@ -16,6 +16,10 @@
     transition-duration: .3s;
     box-shadow: 0 20px 20px -7px rgb(50 50 93 / 10%), 3px 18px 16px -7px rgb(0 0 0 / 20%), 0 -12px 16px -4px rgb(0 0 0 / 3%);
 }
+.card-title {
+    color: #002ECB;
+    font-weight: bolder;
+}
 .cardImgHeroe {
     height: 4em;
     width: 100%;
